<resources>
    <string name="app_name">CS:GO Itens</string>
    <string name="nav_skins">Skins</string>
    <string name="nav_stickers">Adesivos</string>
    <string name="nav_highlights">Destaques</string>
    <string name="nav_crates">Caixas</string>
    <string name="nav_agents">Agentes</string>
    <string name="img_detail_desc">Imagem do item</string>
    <string name="contains">Contém</string>
    <string name="contains_rare">Contém (Raro)</string>
    <string name="back">Voltar</string>
    <string name="search_hint_skins">Pesquisar Skins&#8230;</string>
    <string name="search_hint_stickers">Pesquisar Adesivos&#8230;</string>
    <string name="search_hint_highlights">Pesquisar Destaques&#8230;</string>
    <string name="search_hint_crates">Pesquisar Caixas&#8230;</string>
    <string name="search_hint_agents">Pesquisar Agentes&#8230;</string>
</resources>